--- a/sniic/firebase.json
+++ b/sniic/firebase.json
@@ -14,7 +14,16 @@
         ],
         "headers": [
             {
-                "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|woff|woff2|ttf)",
+                "source": "**",
+                "headers": [
+                    {
+                        "key": "Content-Security-Policy",
+                        "value": "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://esm.sh https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://www.gstatic.com; script-src-elem 'self' 'unsafe-inline' https://esm.sh https://www.gstatic.com; connect-src 'self' https://generativelanguage.googleapis.com https://*.googleapis.com wss://generativelanguage.googleapis.com wss://*.googleapis.com https://esm.sh https://firebaseinstallations.googleapis.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://www.google-analytics.com; media-src 'self' blob:; worker-src 'self' blob:;"
+                    }
+                ]
+            },
+            {
+                "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|woff|woff2|ttf|exr)",
                 "headers": [
                     {
                         "key": "Cache-Control",
